--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-
+<!DOCTYPE html>
+<!--[if lt IE 7]> <html class="ie6 oldie" lang="id"> <![endif]-->
+<!--[if IE 7]>    <html class="ie7 oldie" lang="id"> <![endif]-->
+<!--[if IE 8]>    <html class="ie8 oldie" lang="id"> <![endif]-->
+<!--[if IE 9]>    <html class="ie9" lang="id"> <![endif]-->
+<!--[if gt IE 8]><!--> <html xmlns="http://www.w3.org/1999/xhtml" lang="id"> <!--<![endif]-->
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.png" />
+    <link rel="apple-touch-icon" href="/assets/favicon.png" />
+    <meta name="HandheldFriendly" content="true" />
+    <meta name="viewport" content="width=800" />
+    <link rel="stylesheet" type="text/css" media="all" href="/assets/base-source.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="/assets/homepage.css" />
+    <title>Website Informasi Dari Sudut Pandang Darma Byu</title>
+	<link rel="canonical" href="https://sudutpandang.vercel.app">
+	<meta name="description" content="Sajian Pandangan Seorang Darma Byu Terhadap Beragam Berita dan Informasi Terkini">
+    <meta property="og:title" content="Website Informasi Dari Sudut Pandang Darma Byu" />
+    <meta property="og:description" content="Sajian Pandangan Seorang Darma Byu Terhadap Beragam Berita dan Informasi Terkini" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sudutpandang.vercel.app" />
+    <meta property="og:image" content="/assets/favicon.png" />
+    <meta property="og:site_name" content="Website Informasi Dari Sudut Pandang Darma Byu" />
+    
+  </head>
+  <body>
+    <div class="container">
+		<h1>Website Informasi Dari Sudut Pandang Darma Byu</h1>
+		<h2 class="subheading" style="margin-bottom: 2rem;">Sajian Pandangan Seorang Darma Byu Terhadap Beragam Berita dan Informasi Terkini</h2>
+			<p style="margin: 0 1.5rem 2.5rem; font-size: 1.5rem;"><a href="https://www.sudutpandang.org/"><strong>www.sudutpandang.org</strong></a> merupakan sebuah website online yang berisikan kumpulan narasi informasi berdasarkan sudut pandang seorang Darma Byu. Dilengkapi dengan opini subyektif terhadap pemberitaan yang terjadi saat ini.</p>
+			<p style="margin: 0 1.5rem 2.5rem; font-size: 1.5rem;">Selain informasi terkini, terlampir juga tutorial-tutorial seputar pengetahuan yang dikuasai Darma Byu, yakni SEO. Namun dikarenakan keterbatasan waktu dan pengalaman, untuk segala kekurangan dan kesederhanaannya harap dimaklum.</p>
+			<p style="margin: 0 1.5rem 2.5rem; font-size: 1.5rem;">Dengan rendah hati, Darma Byu menerima segala masukan, saran atau juga Kerjasama. Silahkan jangan sungkan untuk menghubungi saya di beberapa link profile yang telah terlampir. Akhir kata tidak lupa saya ucapkan terima kasih banyak untuk sahabat sekalian yang telah mensupport sebuah karya online ini.</p>
+	  <hr />
+      <h2 class="subheading">
+        <a href="https://www.sudutpandang.org/sitemap.xml">SITEMAP</a>
+      </h2>
+      <hr />
+      <div id="archives">
+        <a name="archives"></a>
+        <h3>Profile Author :</h3>
+        <div class="column">
+          <p>
+            <a href="https://darmabyu.glitch.me/">Glitch</a>
+          </p>
+          <p>
+            <a href="https://darmabyu.github.io/index.html">Github</a>
+          </p>
+          <p>
+            <a href="https://darmabyu.blog.fc2.com/">FC2</a>
+          </p>
+        </div>
+      </div>
+      <div style="clear: both;"></div>
+      <hr />
+      <div style="text-align: center">
+        <a href="/">https://sudutpandang.vercel.app</a>
+      </div>
+    </div>
+  </body>
+</html>
