--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:url" content="https://sudutpandang.vercel.app" />
     <meta property="og:image" content="/assets/favicon.png" />
     <meta property="og:site_name" content="Website Informasi Dari Sudut Pandang Darma Byu" />
-    
+    <meta name="google-site-verification" content="ZCgp949uGk8TPOJBF0dvHFqA3bDfsHAW9u5_OgikJdY" />
   </head>
   <body>
     <div class="container">
