--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <div class="container">
 		<h1>Website Informasi Dari Sudut Pandang Darma Byu</h1>
-		<h2 class="subheading" style="margin-bottom: 2rem;">Sajian Pandangan Seorang Darma Byu Terhadap Beragam Berita dan Informasi Terkini</h2>
+		<h2 class="subheading" style="margin-bottom: 2rem;">Sajian Pandangan Seorang Darma Byu Terhadap Beragam Berita dan Informasi Terkini</h2><br />
 			<p style="margin: 0 1.5rem 2.5rem; font-size: 1.5rem;"><a href="https://www.sudutpandang.org/"><strong>www.sudutpandang.org</strong></a> merupakan sebuah website online yang berisikan kumpulan narasi informasi berdasarkan sudut pandang seorang Darma Byu. Dilengkapi dengan opini subyektif terhadap pemberitaan yang terjadi saat ini.</p>
 			<p style="margin: 0 1.5rem 2.5rem; font-size: 1.5rem;">Selain informasi terkini, terlampir juga tutorial-tutorial seputar pengetahuan yang dikuasai Darma Byu, yakni SEO. Namun dikarenakan keterbatasan waktu dan pengalaman, untuk segala kekurangan dan kesederhanaannya harap dimaklum.</p>
 			<p style="margin: 0 1.5rem 2.5rem; font-size: 1.5rem;">Dengan rendah hati, Darma Byu menerima segala masukan, saran atau juga Kerjasama. Silahkan jangan sungkan untuk menghubungi saya di beberapa link profile yang telah terlampir. Akhir kata tidak lupa saya ucapkan terima kasih banyak untuk sahabat sekalian yang telah mensupport sebuah karya online ini.</p>
@@ -37,7 +37,7 @@
       <hr />
       <div id="archives">
         <a name="archives"></a>
-        <h3>Profile Author :</h3>
+        <h3 class="subheading">Profile Author Sudutpandang.org</h3>
         <div class="column">
           <p>
             <a href="https://darmabyu.glitch.me/">Glitch</a>
